--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -269,38 +269,27 @@ function disableVHWatchers() {
 }
 
 function showMap(){
-  // Tabs / Sichtbarkeit umschalten
   document.getElementById('tab-map').classList.add('active');
   document.getElementById('tab-list').classList.remove('active');
-  const wrapEl = document.getElementById('mapwrap');
   wrapEl.classList.add('active');
   document.getElementById('list').style.display = 'none';
 
-  // Mobile: Vollbild aktivieren + sichtbare Höhe überwachen
   if (isMobile()) {
     enterMapFullscreen();
-    setFullscreenVH();     // Höhe sofort anpassen
+    setFullscreenVH();
+    // Höhe sofort direkt setzen – verhindert schwarzen Bereich
+    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
     enableVHWatchers();
   }
 
-  const mapEl = document.getElementById('map');
   const mapImgEl = document.querySelector('.map-img');
 
-  // Warten bis das Bild geladen ist und das Layout steht
   waitForImage(mapImgEl, () => {
-    requestAnimationFrame(() => {
-      setFullscreenVH(); // Höhe exakt setzen
-
-      const fitOnce = () => {
-        const { scale, x, y } = computeFit();
-        panzoomInstance.setOptions({ minScale: scale });
-        panzoomInstance.setTransform({ x, y, scale });
-      };
-
+    const doFit = () => {
+      setFullscreenVH();
+      wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
       const { scale, x, y } = computeFit();
-
       if (!panzoomInstance) {
-        // Panzoom einmalig initialisieren
         panzoomInstance = Panzoom(mapEl, {
           maxScale: 4,
           contain: 'outside',
@@ -309,34 +298,22 @@ function showMap(){
           startY: y,
           animate: true
         });
-
-        // Desktop: Wheel-Zoom
         wrapEl.addEventListener('wheel', (e) => {
           e.preventDefault();
           panzoomInstance.zoomWithWheel(e);
         }, { passive: false });
-
-        // Resize-Handling
-        const ro = new ResizeObserver(() => {
-          const t = panzoomInstance.getTransform();
-          const min = panzoomInstance.getOptions().minScale ?? scale;
-          if (Math.abs(t.scale - min) < 0.03) fitOnce();
-        });
-        ro.observe(wrapEl);
-
-        // 🔹 Direkt nach Init nochmal fitten
-        setTimeout(fitOnce, 50);
-
-      } else {
-        // Bereits initialisiert → nur anpassen
-        fitOnce();
       }
+      panzoomInstance.setOptions({ minScale: scale });
+      panzoomInstance.setTransform({ x, y, scale });
+    };
 
-      // 🔹 Sicherheits-Fit nach 300 ms
-      setTimeout(fitOnce, 300);
-    });
+    // Sofort fitten
+    doFit();
+    // Sicherheits-Fit 150ms später
+    setTimeout(doFit, 150);
   });
 }
+
 
 
   /* ====== LISTE & DATEN ====== */
@@ -429,6 +406,7 @@ function showMap(){
 </script>
 </body>
 </html>
+
 
 
 
